@@ -1,3 +1,4 @@
+2022-11-18: [FEATURE] Add support for web-based images in `PopupImage` and `Image` widget
 2022-11-18: [FEATURE] Add ability to draw border on `PopupSlider` controls
 2022-11-18: [FEATURE] Add `ExtendedPopupMixin` to simplify adding popups to widgets
 2022-11-18: [FEATURE] Add `MenuMixin` and `DBusMenuMixin` to standardise approach to widget menus
